<?xml version="1.0"?>
<package format="2">
  <name>realsense435_description</name>
  <version>0.0.0</version>
  <description>The realsense435_description package</description>

  <author email="aaryan.murgunde@gmail.com">Aaryan Murgunde</author>
  <maintainer email="aaryan.murgunde@gmail.com">Aaryan Murgunde</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>rosconsole</depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
